--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,35 +1,26 @@
+img{
+    border-radius: 10px;
+}
 *{
     box-sizing: border-box;
-}
-body{
-    margin: 3px;
 }
 .row{
     display: flex;
     height: 350px;
 }
 .column-2{
-    margin: 3px;
     width: 50%;
-    border-style: solid;
-    border-width: 3px;
-    border-color: yellow;
+    height: 350px;
 }
 .column-4{
     width: 25%;
-    background-color: aquamarine;
-}
-.row{
-    border-style: solid;
-    border-width: 3px;
-    border-color: red;
+    height: 350px;
+    color: white;
+    background-color: black;
 }
 .estilos{
     height: 350px;
-    border-style: solid;
 }
-
-
 @media screen and (max-width:600px){
     .column-2{
         flex-direction: row;
