--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,54 +1,84 @@
 body{
     margin: 15%;
-    margin-top: auto;
+    margin-top: 0%;
 }
 img{
     margin: 20px;
+    margin-left: 100px;
     border-radius: 10px;
-    width: 50%;
+    width: 60%;
+    max-width: 100%;
+    height: auto;
+    justify-content: center;
+    align-items: center;
 }
 *{
     box-sizing: border-box;
 }
 .titulo{
     display: block;
-    background-color: green;
-    font-family: Arial, Helvetica, sans-serif;
-    height: 350px;
+    background-color: rgb(248, 255, 41);
+    font-family: 'Lato', sans-serif;
+    height: 300px;
+}
+h1{
+    color: rgb(9, 162, 98);
+    font-size: 50px;
+}
+h3{
+    color: gainsboro;
+    font-size: 45px;
+}
+h4{
+    font-size: 25px;
+}
+h5{
+    font-size: 30px;
+}
+p{
+    font-size: 20px;
 }
 .row{
     display: flex;
     height: 350px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
     background-color: blue;
+    object-fit: cover;
+    border-style: solid;
 }
 .column-2{
     width: 50%;
     height: 350px;
     display: flex;
     background-color: red;
+    object-fit: cover;
+    border-style: solid;
 }
 .column-4{
     width: 25%;
     height: 350px;
     color: white;
     background-color: black;
+    border-style: solid;
 }
 .estilos{
     height: 350px;
-    font-family: Arial, Helvetica, sans-serif;
+    font-family: 'Lato', sans-serif;
     display: block;
+    border-style: solid;
 }
-@media screen and (max-width:600px){
+.texto-1{
+    margin: 50px;
+    font-family: 'Lato', sans-serif;
+}
+@media screen and (max-width:768px){
     .column-2{
         flex-direction: row;
+        flex-wrap: wrap;
         width: 100%;
         color: white;
     }
     .column-4{
         width: 50%;
-    }
-    .column-3{
-        width: 100%;
     }
 }
