--- a/css/estilos.css
+++ b/css/estilos.css
@@ -3,10 +3,10 @@ body{
     margin-top: 0%;
 }
 img{
-    margin: 20px;
-    margin-left: 100px;
+    margin: 3%;
+    margin-left: 20%;
     border-radius: 10px;
-    width: 60%;
+    width: 320px;
     max-width: 100%;
     height: auto;
     justify-content: center;
@@ -16,6 +16,7 @@ img{
     box-sizing: border-box;
 }
 .titulo{
+    margin-top: 5%;
     display: block;
     background-color: rgb(248, 255, 41);
     font-family: 'Lato', sans-serif;
@@ -27,7 +28,7 @@ h1{
 }
 h3{
     color: gainsboro;
-    font-size: 45px;
+    font-size: 40px;
 }
 h4{
     font-size: 25px;
@@ -36,49 +37,83 @@ h5{
     font-size: 30px;
 }
 p{
-    font-size: 20px;
+    font-size: 15px;
 }
 .row{
     display: flex;
     height: 350px;
     font-family: 'Lato', sans-serif;
-    background-color: blue;
     object-fit: cover;
-    border-style: solid;
 }
 .column-2{
     width: 50%;
-    height: 350px;
+    height: 355px;
     display: flex;
     background-color: red;
     object-fit: cover;
-    border-style: solid;
 }
 .column-4{
     width: 25%;
-    height: 350px;
+    height: 355px;
     color: white;
     background-color: black;
-    border-style: solid;
 }
 .estilos{
     height: 350px;
     font-family: 'Lato', sans-serif;
     display: block;
-    border-style: solid;
 }
 .texto-1{
     margin: 50px;
     font-family: 'Lato', sans-serif;
 }
-@media screen and (max-width:768px){
+.final-1{
+    margin-top: 0%;
+    margin-bottom: 0%;
+    background-color: black;
+    color: white;
+    display: flex;
+    height: 100;
+}
+h2{
+    font-size: 25px;
+}
+@media screen and (max-width:600px){
+    .titulo{
+        flex-direction: row;
+    }
     .column-2{
         flex-direction: row;
         flex-wrap: wrap;
-        width: 100%;
-        color: white;
     }
     .column-4{
-        width: 50%;
+        display: flex;
+        flex-wrap: wrap;
+        width: 42%;
+    }
+    .final-1{
+        width: 100%;
+    }
+    .izq{
+        width: 100%;
+    }
+    .der{
+        width: 100%;
+    }
+    .estilos{
+        flex-direction: row;
+        flex-wrap: wrap;
+        width: 100%;
+    }
+    img{
+        width: 90%;
+        height: 85%;
+        margin-right: 5%;
+        margin-left: 5%;
+        margin-bottom: 10%;
+        margin-top: 0%;
+    }
+    h5{
+        font-size: 20px;
     }
 }
