--- a/css/estilos.css
+++ b/css/estilos.css
@@ -113,6 +113,20 @@ h2{
         margin-bottom: 10%;
         margin-top: 0%;
     }
+    h1{
+        color: rgb(9, 162, 98);
+        font-size: 50px;
+    }
+    h2{
+        font-size: 15px;
+    }
+    h3{
+        color: gainsboro;
+        font-size: 30px;
+    }
+    h4{
+        font-size: 15px;
+    }
     h5{
         font-size: 20px;
     }
